--- a/styles/app.css
+++ b/styles/app.css
@@ -5,30 +5,80 @@
   border-radius: 5px;
   height: 167px;
   margin-right: 20px;
-}
-
-.covered {
-  background-color: black;
-  background-image: url("../img/card-back.png") !important;
 }*/
 
-.hand {
-  overflow: auto;
+/*.covered {
+  background-color: black;
+  background-image: url("../img/card-back.png") !important;
+*/
+
+body, html {
+  padding: 0;
+  margin: 0;
+}
+body{
+  background: url('../img/table.jpg');
+  font-family: arial;
+  color: #FFF;
+
+}
+
+.message {
+  top: 0;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  font-size: 30px;
+  line-height: 100px;
+  color: red;
+}
+
+.action {
+  border: none;
+  font-size: 15px;
+  background: red;
+  color: #FFF;
+  margin-top: 20px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.action.stand {
+  background: black;
+}
+
+.game {
+  text-align: center;
+  padding-top: 50px;
+}
+
+.hand{
+
+}
+.hand:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 
 .cardContainer { 
-  float: left;
+  display: inline-block;
   width: 120px;
   height: 167px;
   position: relative;
   perspective: 800px;
+  
+  margin: 0 10px;
 }
+
 
 .card {
   width: 100%;
   height: 100%;
   position: absolute;
+  border: solid 1px black;
+  border-radius: 5px;
   transform-style: preserve-3d;
   transition: transform 1s;
 }
@@ -42,14 +92,14 @@
 }
 
 .card .front {
-  background: red;
+  
 }
 
 .card .back {
-  background: blue;
-  transform: rotateX( 180deg );
+  background: url('../img/card-back.png');
+  transform: rotateY( 180deg );
 }
 
 .covered .card {
-  transform: rotateX( 180deg );
+  transform: rotateY( 180deg );
 }
